--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 .msg{
   background-color: whitesmoke;
-  width: 250px;
+  width: 280px;
   height: 250px;
   
   border-radius: 5px;
@@ -25,9 +25,11 @@ a{
 }
 @media (max-width:540px) {
   .msg{
+    height: auto;
     margin-left: auto;
     margin-right: auto;
-    height: 150px;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 }
 .loader {
